--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Hepta+Slab|Lexend+Peta|Lexend+Zetta&display=swap" rel="stylesheet">
     <title>Acorn Denver</title>
+    <script type="text/javascript" src="https://gatherhere.com/js/leadform.js" id="gather-loader" data-locationid="zg4356pw"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
